--- a/Homework4/Homework4_2/Homework4_2.csproj
+++ b/Homework4/Homework4_2/Homework4_2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B19E7DF-137B-4B10-870F-513317A42F7E}</ProjectGuid>
+    <ProjectGuid>{57CC8A84-5FA7-4CCE-8C37-21A0DAC55696}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>Homework4_2</RootNamespace>
+    <AssemblyName>Homework4_2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
